overflow on play button fixed

--- a/public/style.css
+++ b/public/style.css
@@ -88,7 +88,7 @@ p{
 	border: 10px solid black;
 	flex-grow: 2;
 	text-align: center;
-	font-size:48pt;
+	font-size:36pt;
 	font-family: "serif";
 }
 
